fix: revert scale calculation base and remove min-width on mobile preloader logo container

--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -48,7 +48,6 @@
 
     @media (max-width: 959px) {
       width: 30vw;
-      min-width: 100px;
     }
 
     &.is-visible {
